Update dark mode to correctly display tech icons

--- a/styles/Home.module.scss
+++ b/styles/Home.module.scss
@@ -34,6 +34,14 @@
   @include card-preset;
   align-items: flex-start;
   justify-content: flex-start;
+  position: relative;
+
+  div {
+    position: absolute;
+    top: 2%; right: 2%;
+    height: 100px;
+    width: 120px;
+  }
 
   ul {
     list-style: none;
