--- a/styles/Project.module.scss
+++ b/styles/Project.module.scss
@@ -13,8 +13,7 @@
   @include card-preset;
   align-items: flex-start;
   justify-content: flex-start;
-  min-height: 0;
-  // width: 80%;
+  min-height: 420px;
 
   h2 {
     @include h2;
@@ -30,6 +29,7 @@
     margin: 0;
     font-size: 1.25rem;
     line-height: 1.5;
+    text-align: justify;
   }
 
   span {
@@ -57,6 +57,7 @@
   display: flex;
   flex-direction: column;
   justify-content: space-between;
+  align-items: center;
   width: 100%;
 }
 
@@ -67,13 +68,13 @@
 .icon {
   position: relative;
   cursor: pointer;
-  // border: 1px solid black;
   display: flex;
   justify-content: center;
   align-items: center;
   width: 60px;
 
   img {
+    // filter: none;
     padding: 0;
     margin: 0;
   }
@@ -84,16 +85,21 @@
     left: 50%;
     border-radius: 0.5rem;
     color: #fff;
-    display: flex;
-    justify-content: center;
-    align-items: center;
     padding: 0.5rem;
     position: absolute;
     opacity: 0;
+    display: flex;
+    align-items: center;
+    justify-content: center;
     transform: translate(-50%, 0);
     transition: opacity 0.3s;
     visibility: hidden;
     z-index: 1;
+
+    p {
+      white-space: nowrap;
+      font-size: 16px;
+    }
   }
 
   .tooltip::after {
