--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -24,6 +24,10 @@
   }
 }
 
+div.dark img {
+  filter: invert(1) brightness(0.8);
+}
+
 body.dark::after {
   filter: none;
 }
